@@ -14,7 +14,7 @@
 <img src="DeCE.png" width="340" height="320" alt="DeCE Logo" title="DeCE" style="margin-top:20px;margin-bottom:20px;padding:0px;">
 </p>
 
-<p style="text-align:center;"> October, 2022 </p>
+<p style="text-align:center;"> Manual Updated (Mar. 2023) </p>
 <p style="text-align:right;"> Kawano Toshihiko </p>
 <p style="text-align:right;"> Los Alamos National Laboratory </p>
 
@@ -32,6 +32,8 @@
          History </a>
     <li> <a href="#reference">
          Reference </a>
+    <li> <a href="#source">
+         Source Code </a>
     </ul>
 <li> <a href="usage.html">
      How to Run the Code </a>
@@ -84,7 +86,7 @@
         <li> <a href="ope1.html#multidelete">
              multidelete (delete multiple sections)</a>
         <li> <a href="ope1.html#duplicate">
-             duplicate (copy section)</a>
+             duplicate / copy (copy section)</a>
         <li> <a href="ope1.html#calc">
              calc (calculate sum, difference, ratio, or product of two sections in MF3)</a>
         <li> <a href="ope1.html#make4">
@@ -272,8 +274,8 @@ They are known as "the Mohs scale of mineral hardness." The code was
 originally developed as a program <code>E-Type</code>, which was a
 converter program from the Hauser-Feshbach model code output into the
 ENDF-6 formatted data, first appeared in Summer 2009.  This was
-totally superseded by DeCE.  The current version, first built in November 2020,
-is Jadeite, whose Mohs scale is 6.5 - 7.</p>
+totally superseded by DeCE.  The current version, first built in October 2022,
+is Garnet, whose Mohs scale is 6.5 - 7.5.</p>
 
 <p>All versions up to DeCE (Fluorite) were just for the author's
 private use. Apatite is the first version of outside release (yet
@@ -315,6 +317,12 @@ adding a Coulomb function for charged particle channels.</p>
 <p>Toshihiko Kawano</p>
 <p>Journal of Nuclear Science and Technology, vol.56, issue 11, pages 1029-1035 (2019)</p>
 <p><a href="https://doi.org/10.1080/00223131.2019.1637797">https://doi.org/10.1080/00223131.2019.1637797 </a></p>
+
+
+<h2><a name="source"> Source Code </a></h2>
+
+<p>The DeCE source code is available at <a href="https://github.com/toshihikokawano/DeCE"> DeCE GitHub repository </a></p>
+
 
 <hr>
 <a href="#top">    [TOP]  </a>
