@@ -43,7 +43,8 @@ The file name must be quoted by the quotation marks.</p>
  9.000000e-01 4.735559e+03 3.920111e+01
  1.000000e+00 4.550877e+03 3.409828e+01
 </pre>
-<p>where the energies are in MeV, and the cross sections in milli-barns.
+<p>where the energies are in MeV, and the cross sections in milli-barns
+as a default.
 When <i>offset</i> is not given, DeCE reads the first column as the energy,
 and the second column as the cross section. When <i>offset=2</i> is specified for example,
 the second column data will be skipped and the third column data are copied.</p> 
