@@ -80,6 +80,27 @@ by a Gaussian weighting function, with the width of <i>width</i>.</p>
 
 
 
+<h2><a name="smatrixelement">smatrixelement (S-matrix elements from resonance parameters)</a></h2>
+
+<pre id="syn">
+   smatrixelement <i>X-min</i> <i>X-max</i> <i>delta-X</i>
+   smatrixelement <i>X</i>
+   smatrixelement
+</pre>
+
+<pre id="dat">
+# Energy[eV]   0  1/2                  1  1/2                  1  3/2                
+   1.0000e-05  1.0000e+00 -5.2918e-06  1.0000e+00 -1.8803e-17  1.0000e+00 -1.7898e-17
+   1.1000e-05  1.0000e+00 -5.5501e-06  1.0000e+00 -2.1692e-17  1.0000e+00 -2.0649e-17
+   1.2000e-05  1.0000e+00 -5.7968e-06  1.0000e+00 -2.4716e-17  1.0000e+00 -2.3528e-17
+   1.3000e-05  1.0000e+00 -6.0335e-06  1.0000e+00 -2.7870e-17  1.0000e+00 -2.6529e-17
+   1.5000e-05  1.0000e+00 -6.4811e-06  1.0000e+00 -3.4542e-17  1.0000e+00 -3.2881e-17
+   1.7500e-05  1.0000e+00 -7.0003e-06  1.0000e+00 -4.3528e-17  1.0000e+00 -4.1435e-17 ...
+</pre>
+
+<p>Print S-matrix elements calculated from resolved resonance parameters. </p>
+
+
 <h2><a name="resonanceangdist">resonanceangdist (merge energy averaged Legendre coefficients with existing elastic scattering angular distributions)</a></h2>
 
 <pre id="syn">
